Small update to Theisen's URL

--- a/team/index.html
+++ b/team/index.html
@@ -377,7 +377,7 @@
     <a href="https://akondrahman.github.io/"  class="list-group-item list-group-item-action"><span class="far fa-user fa-fw"></span>
     Akond Rahman
     </a>
-    <a href="http://theisencr.github.io/" class="list-group-item list-group-item-action"><span class="far fa-user fa-fw"></span>
+    <a href="http://crtheisen.github.io/" class="list-group-item list-group-item-action"><span class="far fa-user fa-fw"></span>
     Chris Theisen
     </a>
     <a href="" class="list-group-item list-group-item-action"><span class="far fa-user fa-fw"></span>
